<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:paddingBottom="60dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/ten"
                    android:textColor="@color/color3" />

                <EditText
                    android:id="@+id/ten"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:inputType="text"
                    android:textColor="@color/color3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/mota"
                    android:textColor="@color/color3" />

                <EditText
                    android:id="@+id/tuoi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/color3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/gioitinh"
                    android:textColor="@color/color3" />

                <Spinner
                    android:id="@+id/spiner_gioitinh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/gioi_tinh">
                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/sdt"
                    android:textColor="@color/color3" />

                <EditText
                    android:id="@+id/sdtlh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"

                    android:textColor="@color/color3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/tinh"
                    android:textColor="@color/color3" />

                <Spinner
                    android:id="@+id/spiner_tinh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                </Spinner>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/huyen"
                    android:textColor="@color/color3" />

                <Spinner
                    android:id="@+id/spiner_huyen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                </Spinner>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/diachi"
                    android:textColor="@color/color3" />

                <EditText
                    android:id="@+id/diachi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/gia"
                    android:textColor="@color/color3" />

                <EditText
                    android:id="@+id/giatien"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:textColor="@color/color3" />

            </LinearLayout>

            <!-- Thêm TextView hiển thị phí đăng bài bằng VNĐ -->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/dientich"
                    android:textColor="@color/color3" />

                <EditText
                    android:id="@+id/dientich"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:textColor="@color/color3" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="m²"
                    android:textColor="@color/color3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="Thời gian tồn tại: "
                    android:textColor="@color/color3" />

                <EditText
                    android:id="@+id/songay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:textColor="@color/color3" />

                <Spinner
                    android:id="@+id/spiner_loaingay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/gia_tien">

                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/hinhthucdang"
                    android:textColor="@color/color3" />

                <Spinner
                    android:id="@+id/spiner_hinhthucdang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/hinh_thuc_dang">

                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/loaitin"
                    android:textColor="@color/color3" />

                <Spinner
                    android:id="@+id/spiner_loaitin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/loai_tin">

                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="Thêm hình ảnh"
                    android:textColor="@color/color3">

                </TextView>

                <!--                <Button-->

                <!--                    android:id="@+id/btchontep"-->
                <!--                    android:layout_width="60dp"-->
                <!--                    android:layout_height="match_parent"-->
                <!--                    android:layout_marginRight="10dp"-->
                <!--                    android:drawableRight="@drawable/outline_add_photo_alternate_24"-->
                <!--                    app:backgroundTint="#FFFFFF" />-->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btchontep"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="10dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="Thêm ảnh"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="12dp"
                    app:icon="@drawable/outline_add_photo_alternate_24"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"
                    app:iconTint="@color/black" />


                <ImageView
                    android:id="@+id/imv"
                    android:layout_width="@dimen/img_view_upload_width"
                    android:layout_height="@dimen/img_view_upload_height" />

            </LinearLayout>

            <Button
                android:id="@+id/btluu"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:layout_gravity="center"
                android:background="@color/color_4"
                android:text="Đăng bài và thanh toán"
                android:textColor="@color/color_white"
                app:backgroundTint="@color/colorAccent" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>